# hevc_analyzer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  result.txt  test.hevc  test_vui.hevc
include/: bit_stream_reader.h  frame_analyzer.h  heif_parser.h  hevc_parser.h  hevc_types.h  macroblock_analyzer.h  nal_unit.h  pps_parser.h  sps_parser.h  vps_parser.h
src/: bit_stream_reader.cpp  frame_analyzer.cpp  heif_parser.cpp  hevc_parser.cpp  macroblock_analyzer.cpp  main.cpp  nal_unit.cpp  pps_parser.cpp  sps_parser.cpp  vps_parser.cpp
tools/: gen_heif.py  generate_test_heif.cpp
